[package]
name = "nutexb"
version = "0.0.4"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
description = "Library for working with Smash Ultimate's nutexb texture files"
license = "MIT"
repository = "https://github.com/jam1garner/nutexb"

[[bin]]
name = "nutexb"
path = "src/main.rs"

[dependencies]
ddsfile = "0.4"
binwrite = "^0.1.5"
image = "0.23.10"
binread = "2.1.1"
