[package]
name = "nutexb"
version = "0.0.5"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
description = "Library for working with Smash Ultimate's nutexb texture files"
license = "MIT"
repository = "https://github.com/jam1garner/nutexb"

[[bin]]
name = "nutexb"
path = "src/main.rs"

[dependencies]
ddsfile = "0.5.0"
image = "0.23.10"
tegra_swizzle = { git = "https://github.com/ScanMountGoat/nutexb_swizzle" }
binrw = "0.8.4"

[profile.release]
debug = true