[package]
name = "nutexb"
version = "0.6.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
description = "Library for working with Smash Ultimate's nutexb texture files"
license = "MIT"
repository = "https://github.com/jam1garner/nutexb"

[dependencies]
ddsfile = { version = "0.5.1", optional = true }
image = { version = "0.24.3", optional = true }
tegra_swizzle = "0.3.0"
binrw = "0.10.0"

[package.metadata.docs.rs]
all-features = true