[package]
name = "nutexb"
version = "0.7.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2021"
description = "Library for working with Smash Ultimate's nutexb texture files"
license = "MIT"
repository = "https://github.com/jam1garner/nutexb"

[dependencies]
ddsfile = { version = "0.6.0", optional = true }
image = { version = "0.25.1", optional = true }
tegra_swizzle = "0.4.0"
binrw = "0.15"

[package.metadata.docs.rs]
all-features = true
